--- a/src/components/EditGolfForm/EditGolfForm.css
+++ b/src/components/EditGolfForm/EditGolfForm.css
@@ -22,4 +22,13 @@
         flex-direction: column;
         gap: 24px;
     }
+
+    .edit-golf-buttons {
+        flex-direction: column;
+        gap: 16px;
+    }
+
+    .edit-golf-buttons button {
+        width: 100%;
+    }
 }
